remove support for Thanos in Prometheus Helm chart

--- a/charts/monitoring/prometheus/config/prometheus.yaml
+++ b/charts/monitoring/prometheus/config/prometheus.yaml
@@ -16,14 +16,10 @@ global:
   scrape_interval: 30s
   scrape_timeout: 10s
   evaluation_interval: 30s
-  {{- if or .Values.prometheus.externalLabels .Values.prometheus.thanos.enabled }}
+  {{- if .Values.prometheus.externalLabels }}
   external_labels:
     {{- range $k, $v := .Values.prometheus.externalLabels }}
     {{ $k }}: {{ $v | quote }}
-    {{- end }}
-    {{- if .Values.prometheus.thanos.enabled }}
-    # Each Prometheus has to have unique labels.
-    replica: $(POD_NAME)
     {{- end }}
   {{- end }}
 
