--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -423,6 +423,9 @@ spec:
                               datastore:
                                 description: The default Datastore to be used for provisioning volumes using storage classes/dynamic provisioning and for storing virtual machine files in case no `Datastore` or `DatastoreCluster` is provided at Cluster level.
                                 type: string
+                              defaultTagCategoryID:
+                                description: DefaultTagCategoryID is the tag category id that will be used as default, if users don't specify it on a cluster level, and they don't wish KKP to create default generated tag category, upon cluster creation.
+                                type: string
                               endpoint:
                                 description: Endpoint URL to use, including protocol, for example "https://vcenter.example.com".
                                 type: string
