--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
@@ -1005,6 +1005,9 @@ spec:
                       required:
                         - cidrBlocks
                       type: object
+                    tunnelingAgentIP:
+                      description: TunnelingAgentIP is the address used by the tunneling agents
+                      type: string
                   required:
                     - dnsDomain
                     - pods
