--- a/pkg/applications/helmclient/testdata/examplechart-v2/templates/service.yaml
+++ b/pkg/applications/helmclient/testdata/examplechart-v2/templates/service.yaml
@@ -11,15 +11,19 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
-# Default values for examplechart.
-# This is a YAML-formatted file.
-# Declare name/value pairs to be passed into your templates.
-# name: value
-
-cmData:
-  foo-version-2: bar-version-2
-
-versionLabel: "2.0"
-
-deployService: false
+{{ if .Values.deployService }}
+apiVersion: v1
+kind: Service
+metadata:
+  name: svc-1
+spec:
+  ports:
+    - name: "80"
+      port: 8080
+      protocol: TCP
+      targetPort: 8080
+  selector:
+    app: svc-1
+  sessionAffinity: None
+  type: LoadBalancer
+{{ end }}
