--- a/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationdefinitions.yaml
+++ b/pkg/crd/k8c.io/apps.kubermatic.k8c.io_applicationdefinitions.yaml
@@ -236,7 +236,7 @@ spec:
                             description: TemplateCredentials hodls the credentials that may need for templating application.
                             properties:
                               helmCredentials:
-                                description: HelmCredentials holds the ref to the secret with helm credentials needed to build helm dependencies. It's optional and only makes sense make application source is not of type Helm (e.g. git). If  application source is Helm then dependencies are already packaged in chart archive. It's Either username / Password or registryConfigFile can be defined.
+                                description: HelmCredentials holds the ref to the secret with helm credentials needed to build helm dependencies. It's optional and only makes sense if application source is not of type Helm (e.g. git). If  application source is Helm then dependencies are already packaged in chart archive. It's Either username / Password or registryConfigFile can be defined.
                                 properties:
                                   password:
                                     description: Password holds the ref and key in the secret for the Password credential. The Secret must exist in the namespace where KKP is installed (default is "kubermatic"). The Secret must be annotated with `apps.kubermatic.k8c.io/secret-type:` set to helm or git
