remove redundant configuration

--- a/hack/reconciling.yaml
+++ b/hack/reconciling.yaml
@@ -19,7 +19,7 @@ package: reconciling
 boilerplate: hack/boilerplate/ce/boilerplate.go.txt
 resourceTypes:
   # autoscaling/v1
-  - { package: k8s.io/autoscaler/vertical-pod-autoscaler/pkg/apis/autoscaling.k8s.io/v1, resourceName: VerticalPodAutoscaler, importAlias: autoscalingk8siov1 }
+  - { package: k8s.io/autoscaler/vertical-pod-autoscaler/pkg/apis/autoscaling.k8s.io/v1, resourceName: VerticalPodAutoscaler }
 
   # apiextensions/v1
   - { package: k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1, resourceName: CustomResourceDefinition }
@@ -47,8 +47,8 @@ resourceTypes:
   - { package: k8c.io/kubermatic/v2/pkg/apis/kubermatic/v1, resourceName: UserSSHKey }
 
   # appskubermatic/v1
-  - { package: k8c.io/kubermatic/v2/pkg/apis/apps.kubermatic/v1, importAlias: appskubermaticv1, resourceName: ApplicationDefinition }
-  - { package: k8c.io/kubermatic/v2/pkg/apis/apps.kubermatic/v1, importAlias: appskubermaticv1, resourceName: ApplicationInstallation }
+  - { package: k8c.io/kubermatic/v2/pkg/apis/apps.kubermatic/v1, resourceName: ApplicationDefinition }
+  - { package: k8c.io/kubermatic/v2/pkg/apis/apps.kubermatic/v1, resourceName: ApplicationInstallation }
 
   # gatekeeper/v1
   - { package: github.com/open-policy-agent/frameworks/constraint/pkg/apis/templates/v1, resourceName: ConstraintTemplate, importAlias: gatekeeperv1, apiVersionPrefix: Gatekeeper }
