--- a/addons/csi/openstack/nodeplugin.yaml
+++ b/addons/csi/openstack/nodeplugin.yaml
@@ -50,7 +50,7 @@ spec:
       hostNetwork: true
       containers:
         - name: node-driver-registrar
-          image: '{{ Registry "k8s.gcr.io" }}/sig-storage/csi-node-driver-registrar:v1.3.0'
+          image: '{{ Registry "registry.k8s.io" }}/sig-storage/csi-node-driver-registrar:v1.3.0'
           args:
             - "--csi-address=$(ADDRESS)"
             - "--kubelet-registration-path=$(DRIVER_REG_SOCK_PATH)"
@@ -74,7 +74,7 @@ spec:
             - name: registration-dir
               mountPath: /registration
         - name: liveness-probe
-          image: '{{ Registry "k8s.gcr.io" }}/sig-storage/livenessprobe:v2.4.0'
+          image: '{{ Registry "registry.k8s.io" }}/sig-storage/livenessprobe:v2.4.0'
           args:
             - --csi-address=/csi/csi.sock
           volumeMounts:
