--- a/addons/csi/vsphere/csi-snapshot-validatingwebhook.yaml
+++ b/addons/csi/vsphere/csi-snapshot-validatingwebhook.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 # Sourced from:
-# - https://raw.githubusercontent.com/kubernetes-sigs/vsphere-csi-driver/release-2.5/manifests/vanilla/csi-snapshot-validatingwebhook.yaml
+# - https://github.com/kubernetes-sigs/vsphere-csi-driver/blob/v2.7.0/manifests/vanilla/csi-snapshot-validatingwebhook.yaml
 # Modifications:
 #   - template function to replace base registry
 #   - remove ValidatingWebhookConfiguration (handled in code)
@@ -24,7 +24,6 @@
 {{ if .Cluster.Features.Has "externalCloudProvider" }}
 {{ if eq .Cluster.CloudProviderName "vsphere" }}
 
-# Requires k8s 1.20+
 ---
 apiVersion: v1
 kind: Service
@@ -61,7 +60,7 @@ spec:
           type: RuntimeDefault
       containers:
         - name: snapshot-validation
-          image: {{ Image "registry.k8s.io/sig-storage/snapshot-validation-webhook:v5.0.1" }} # change the image if you wish to use your own custom validation server image
+          image: {{ Image "k8s.gcr.io/sig-storage/snapshot-validation-webhook:v6.0.1" }} # change the image if you wish to use your own custom validation server image
           imagePullPolicy: IfNotPresent
           args: ['--tls-cert-file=/run/secrets/tls/cert.pem', '--tls-private-key-file=/run/secrets/tls/key.pem']
           ports:
@@ -74,6 +73,5 @@ spec:
         - name: webhook-certs
           secret:
             secretName: csi-snapshot-webhook-certs
-
 {{ end }}
 {{ end }}
