split aws dualstack test by cni

--- a/.prow/dualstack.yaml
+++ b/.prow/dualstack.yaml
@@ -90,9 +90,7 @@ presubmits:
               memory: 4Gi
               cpu: 2
 
-  - name: pre-kubermatic-dualstack-e2e-aws
-    # TODO: Mark them as required, remove optional flag, when the test are functional again.
-    optional: true
+  - name: pre-kubermatic-dualstack-e2e-aws-cilium
     run_if_changed: ".*(cilium|canal|dualstack|addon|cni|provider|machine|webhook|.prow|go.mod|proxy|network).*"
     decorate: true
     clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
@@ -111,7 +109,43 @@ presubmits:
             - "./hack/ci/run-dualstack-e2e-test.sh"
           env:
             - name: CNI
-              value: canal,cilium
+              value: cilium
+            - name: PROVIDER
+              value: aws
+            - name: KUBERMATIC_EDITION
+              value: ee
+            - name: SERVICE_ACCOUNT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: e2e-ci
+                  key: serviceAccountSigningKey
+          securityContext:
+            privileged: true
+          resources:
+            requests:
+              memory: 4Gi
+              cpu: 2
+
+  - name: pre-kubermatic-dualstack-e2e-aws-canal
+    run_if_changed: ".*(cilium|canal|dualstack|addon|cni|provider|machine|webhook|.prow|go.mod|proxy|network).*"
+    decorate: true
+    clone_uri: "ssh://git@github.com/kubermatic/kubermatic.git"
+    labels:
+      preset-kubeconfig-ci: "true"
+      preset-docker-pull: "true"
+      preset-docker-push: "true"
+      preset-kind-volume-mounts: "true"
+      preset-vault: "true"
+      preset-goproxy: "true"
+    spec:
+      containers:
+        - image: quay.io/kubermatic/build:go-1.19-node-18-kind-0.17-4
+          imagePullPolicy: Always
+          command:
+            - "./hack/ci/run-dualstack-e2e-test.sh"
+          env:
+            - name: CNI
+              value: canal
             - name: PROVIDER
               value: aws
             - name: KUBERMATIC_EDITION
