Disable cloud route config in aws-ccm
Signed-off-by: Sachin Tiptur <sachin@kubermatic.com>

--- a/pkg/resources/test/fixtures/deployment-aws-1.23.5-aws-cloud-controller-manager-externalCloudProvider.yaml
+++ b/pkg/resources/test/fixtures/deployment-aws-1.23.5-aws-cloud-controller-manager-externalCloudProvider.yaml
@@ -32,7 +32,7 @@ spec:
         - -timeout
         - "1"
         - -command
-        - '{"command":"/bin/aws-cloud-controller-manager","args":["--kubeconfig=/etc/kubernetes/kubeconfig/kubeconfig","--cloud-config=/etc/kubernetes/cloud/config","--cloud-provider=aws","--cluster-cidr=172.25.0.0/16"]}'
+        - '{"command":"/bin/aws-cloud-controller-manager","args":["--kubeconfig=/etc/kubernetes/kubeconfig/kubeconfig","--cloud-config=/etc/kubernetes/cloud/config","--cloud-provider=aws","--configure-cloud-routes=false","--cluster-cidr=172.25.0.0/16"]}'
         command:
         - /http-prober-bin/http-prober
         env:
