--- a/docs/zz_generated.seed.ee.yaml
+++ b/docs/zz_generated.seed.ee.yaml
@@ -319,6 +319,9 @@ spec:
       clusterSize: 3
       diskSize: 5Gi
       resources: null
+      # SpaceQuota is the storage size limit for etcd. Maximum allowed value for SpaceQuota is 8GB
+      # More Info: https://etcd.io/docs/v3.5/op-guide/maintenance/#space-quota
+      spaceQuota: null
       storageClass: ""
       tolerations: null
     # KonnectivityProxy configures resources limits/requests for konnectivity-server sidecar.
