Add containerruntime in externalcluster
Signed-off-by: Harshita sharma <harshita.sharma6174@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_externalclusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_externalclusters.yaml
@@ -346,6 +346,9 @@ spec:
                           type: array
                       type: object
                   type: object
+                containerRuntime:
+                  description: ContainerRuntime to use, i.e. `docker` or `containerd`.
+                  type: string
                 humanReadableName:
                   description: HumanReadableName is the cluster name provided by the user
                   type: string
