--- a/addons/csi/vsphere/vsphere-csi-driver.yaml
+++ b/addons/csi/vsphere/vsphere-csi-driver.yaml
@@ -19,6 +19,7 @@
 #   - remove windows support daemon sets
 #   - template csi-migration true or false
 #   - template function to replace base registry
+#   - change image domain to registry.k8s.io
 #   - remove node selector for operator
 #   - set "improved-volume-topology": "false"
 #   - set "improved-csi-idempotency": "false"
@@ -272,7 +273,7 @@ spec:
           type: RuntimeDefault
       containers:
         - name: csi-attacher
-          image: {{ Image "k8s.gcr.io/sig-storage/csi-attacher:v3.5.0" }}
+          image: {{ Image "registry.k8s.io/sig-storage/csi-attacher:v3.5.0" }}
           args:
             - "--v=4"
             - "--timeout=300s"
@@ -287,7 +288,7 @@ spec:
             - mountPath: /csi
               name: socket-dir
         - name: csi-resizer
-          image: {{ Image "k8s.gcr.io/sig-storage/csi-resizer:v1.5.0" }}
+          image: {{ Image "registry.k8s.io/sig-storage/csi-resizer:v1.5.0" }}
           args:
             - "--v=4"
             - "--timeout=300s"
@@ -356,7 +357,7 @@ spec:
             periodSeconds: 5
             failureThreshold: 3
         - name: liveness-probe
-          image: {{ Image "k8s.gcr.io/sig-storage/livenessprobe:v2.7.0" }}
+          image: {{ Image "registry.k8s.io/sig-storage/livenessprobe:v2.7.0" }}
           args:
             - "--v=4"
             - "--csi-address=/csi/csi.sock"
@@ -401,7 +402,7 @@ spec:
               name: ca-bundle
               readOnly: true
         - name: csi-provisioner
-          image: {{ Image "k8s.gcr.io/sig-storage/csi-provisioner:v3.2.1" }}
+          image: {{ Image "registry.k8s.io/sig-storage/csi-provisioner:v3.2.1" }}
           args:
             - "--v=4"
             - "--timeout=300s"
@@ -420,7 +421,7 @@ spec:
             - mountPath: /csi
               name: socket-dir
         - name: csi-snapshotter
-          image: {{ Image "k8s.gcr.io/sig-storage/csi-snapshotter:v6.0.1" }}
+          image: {{ Image "registry.k8s.io/sig-storage/csi-snapshotter:v6.0.1" }}
           args:
             - "--v=4"
             - "--kube-api-qps=100"
@@ -473,7 +474,7 @@ spec:
           type: RuntimeDefault
       containers:
         - name: node-driver-registrar
-          image: {{ Image "k8s.gcr.io/sig-storage/csi-node-driver-registrar:v2.5.1" }}
+          image: {{ Image "registry.k8s.io/sig-storage/csi-node-driver-registrar:v2.5.1" }}
           args:
             - "--v=5"
             - "--csi-address=$(ADDRESS)"
@@ -563,7 +564,7 @@ spec:
             periodSeconds: 5
             failureThreshold: 3
         - name: liveness-probe
-          image: {{ Image "k8s.gcr.io/sig-storage/livenessprobe:v2.7.0" }}
+          image: {{ Image "registry.k8s.io/sig-storage/livenessprobe:v2.7.0" }}
           args:
             - "--v=4"
             - "--csi-address=/csi/csi.sock"
